Signed-off-by: Maxim Hodnenko <testingon2022@gmail.com>

--- a/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/SimplePic.uvprojx
+++ b/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/SimplePic.uvprojx
@@ -415,6 +415,9 @@
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
+          <GroupName>::CMSIS Driver</GroupName>
+        </Group>
+        <Group>
           <GroupName>::Device</GroupName>
         </Group>
       </Groups>
@@ -430,6 +433,12 @@
       </gpdsc>
     </gpdscs>
     <apis>
+      <api Capiversion="2.3.0" Cclass="CMSIS Driver" Cgroup="SPI" exclusive="0">
+        <package name="CMSIS" schemaVersion="1.7.36" url="https://www.keil.com/pack/" vendor="ARM" version="6.1.0"/>
+        <targetInfos>
+          <targetInfo name="NUCLEO-L073RZ"/>
+        </targetInfos>
+      </api>
       <api Capiversion="1.0.1" Cclass="CMSIS" Cgroup="OS Tick" exclusive="1">
         <package name="CMSIS" schemaVersion="1.7.36" url="https://www.keil.com/pack/" vendor="ARM" version="6.1.0"/>
         <targetInfos>
@@ -464,6 +473,12 @@
       </component>
       <component Capiversion="2.3.0" Cclass="CMSIS" Cgroup="RTOS2" Csub="Keil RTX5" Cvariant="Source" Cvendor="ARM" Cversion="5.9.0" condition="RTX5">
         <package name="CMSIS-RTX" schemaVersion="1.7.36" url="https://www.keil.com/pack/" vendor="ARM" version="5.9.0"/>
+        <targetInfos>
+          <targetInfo name="NUCLEO-L073RZ"/>
+        </targetInfos>
+      </component>
+      <component Capiversion="2.1.0" Cclass="CMSIS Driver" Cgroup="SPI" Cvendor="Keil" Cversion="1.0.0" condition="STM32L0 CMSIS STM32CubeMX">
+        <package name="STM32L0xx_DFP" schemaVersion="1.7.28" url="https://www.keil.com/pack/" vendor="Keil" version="2.3.0"/>
         <targetInfos>
           <targetInfo name="NUCLEO-L073RZ"/>
         </targetInfos>
